Reorganize code for modules and finish authentication
TODO:  Logout process does not sign you out from the site due to a workflow issue with the Firebase process.

--- a/DexterAdmin_Frontend/dexter-admin/src/index.html
+++ b/DexterAdmin_Frontend/dexter-admin/src/index.html
@@ -8,21 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-  <script type="text/javascript" src="//www.gstatic.com/authtoolkit/js/gitkit.js"></script>
-  <link type=text/css rel=stylesheet href="//www.gstatic.com/authtoolkit/css/gitkit.css" />
-  <script type=text/javascript>
-
-    window.google.identitytoolkit.start(
-      '#gitkitWidgetDiv', // accepts any CSS selector
-      {
-        widgetUrl: "https://localhost:4200",
-        signOutUrl: "/",
-      }
-    );
-  </script>
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
